<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="developed_by_sourav_ghosh">Developed by Sourav Ghosh</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">Register Here</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="register_user">Register User</string>
    <string name="go_to_sign_in">Go to Sign IN</string>
    <string name="reset_password">Reset Password</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Select Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="whatsapp_clone">WhatsApp Clone</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="new_broadcast">New BroadCast</string>
    <string name="delete_your_account">Delete Your Account</string>
</resources>