<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetpassword">

    <TextView
        android:id="@+id/whatsapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp"
        android:textSize="60sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/developedbysouravghosh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by_sourav_ghosh"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/whatsapp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:textSize="24sp"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developedbysouravghosh"
        android:autofillHints="" />

    <Button
        android:id="@+id/resetpassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/reset_password"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>